--- a/src2/conditions/templates/index.html
+++ b/src2/conditions/templates/index.html
@@ -14,7 +14,7 @@
     {% if new_year %}
     <h1>Yes! Happy New Year!</h1>
     {% else %}
-    <h1>NO</h1>
+    <h1>NO ! It's not new year !</h1>
     {% endif %}
 </body>
 
