--- a/src2/conditions/templates/index.html
+++ b/src2/conditions/templates/index.html
@@ -12,9 +12,9 @@
 
 <body>
     {% if new_year %}
-    <h1>Yes! Happy New Year!</h1>
+    <h1>{{yesMsg}}</h1>
     {% else %}
-    <h1>NO ! It's not new year !</h1>
+    <h1>{{noMsg}}</h1>
     {% endif %}
 </body>
 
